--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "hospital-booking-platform-alhayah",
+  "name": "alhayahhealth",
   "compatibility_date": "2026-02-05",
   "assets": {
     "directory": "./build"
